# uv-stack

./: .gitignore  README.md  pyproject.toml  tasks.py  vrzn.toml
src/uv_stack/: __init__.py  commands.py  config.py  defaults.py  errors.py  models.py  parse.py  render.py  resolver.py  runner.py
src/uv_stack/cli/: __init__.py  _render.py  bundle.py  config_cmd.py  create.py  doctor.py  env.py  list_cmd.py  profile.py  project.py  resolve.py  show.py  update.py  upgrade.py
src/uv_stack/operations/: create.py  doctor.py  init.py  project.py  update.py  upgrade.py
src/uvstack/: __init__.py  commands.py  config.py  defaults.py  errors.py  fsutil.py  models.py  parse.py  render.py  resolver.py  runner.py
src/uvstack/cli/: __init__.py  _render.py  bundle.py  config_cmd.py  env.py  profile.py  project.py  resolve.py
src/uvstack/operations/: create.py  doctor.py  init.py  project.py  update.py
tests/: conftest.py  test_cli.py  test_commands.py  test_config.py  test_defaults.py  test_doctor.py  test_errors.py  test_fsutil.py  test_init_op.py  test_models.py  test_operations.py  test_parse.py  test_render.py  test_resolver.py  test_runner.py
