[project]
name = "uv-stack"
version = "0.1.2"
description = "Formalized uv + micromamba Python environment management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich-click>=1.7",
    "pydantic>=2",
]

[project.scripts]
stack = "uv_stack.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uv_stack"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "vrzn>=0.2.2",
    "invoke>=3.0.3",
    "build>=1.5.0",
    "twine>=6.2.0",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
